--- a/myfile/html/table1.html
+++ b/myfile/html/table1.html
@@ -113,6 +113,7 @@
     		  { 'text':'事件分发' , 'readmeurl':baseUrl+'README.MD' },
     		  { 'text':'Volley' , 'readmeurl':baseUrl+'README.MD' },
     		  { 'text':'Okhttp' , 'readmeurl':baseUrl+'okhttpdemo/README.MD' },
+    		  { 'text':'Retrofit' , 'readmeurl':baseUrl+'retrofitdemo/README.MD' },
     		  { 'text':'Fragment' , 'readmeurl':baseUrl+'README.MD' },
     		  { 'text':'ListView A-Z' , 'readmeurl':baseUrl+'README.MD' },
     		  { 'text':'Viewpager' , 'readmeurl':baseUrl+'README.MD' },
